Completed homework and ran all tests successfully

--- a/force-app/main/default/classes/FlowControlLoopsCollections.cls
+++ b/force-app/main/default/classes/FlowControlLoopsCollections.cls
@@ -14,7 +14,7 @@
 * in flow control, loops, and collections. By mastering these concepts, developers will be able to write more
 * efficient and effective code in their Salesforce projects.
 *
-* @author Your Name
+* @author Shelley Snow
 */
 
 public with sharing class FlowControlLoopsCollections {
@@ -29,7 +29,17 @@ public with sharing class FlowControlLoopsCollections {
      * @return "Hello World!" if x greater than y, otherwise return null.
      */
     public static String helloWorld(Integer x, Integer y) {
-        return null; // Replace null with the variable you used to store the result
+        // Check if either number is null, if so, return null
+        if (x == null || y == null) {
+            return null;
+        }
+        //Check if x is greater than y, if so, return "Hello World!"
+        // If not, return null
+        if (x > y) {
+            return 'Hello World!'; 
+       } else {
+            return null;
+       }
     }
 
     /**
@@ -42,7 +52,13 @@ public with sharing class FlowControlLoopsCollections {
      * @return true if the person is eligible to vote, false otherwise.
      */
     public static Boolean votingEligibility(Integer age) {
-        return null; // Replace null with the variable you used to store the result
+        //Check if a person's age is 18 or older if so, return true
+        // If not, return false
+        if (age >= 18) {
+            return true;
+        } else {
+            return false;
+        }
     }
 
     /**
@@ -55,10 +71,18 @@ public with sharing class FlowControlLoopsCollections {
      * @return The maximum of the two numbers, or null if either number is null.
      */
     public static Integer findMax(Integer num1, Integer num2) {
-        // Initialize largestNum as null
-        Integer largestNum = null;
-
-        return null; // Replace null with the variable you used to store the result
+        // Check if either number is null, if so return null
+        if (num1 == null || num2 == null) {
+            return null;
+        }
+        //Compare the two numbers and find the maximum number
+        //If num1 is greater or equal, return num1
+        //If num2 is greater, return num2
+        if (num1 >= num2) {
+            return num1;
+        } else {
+            return num2;
+        }
     }
 
 
@@ -71,7 +95,18 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the number is "Positive", "Negative", or "Zero", or null if the number is null.
      */
     public static String checkNumber(Integer a) {
-        return null; // Replace null with the variable you used to store the result
+        // Check if the number is null
+        if (a == null) {
+            return null;
+        }
+        // Check if the number is positive, negative or zero
+        if (a > 0) {
+            return 'Positive';
+        } else if (a < 0) {
+            return 'Negative';
+        } else {
+            return 'Zero';
+        }
     }
 
     /**
@@ -83,7 +118,17 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the number is "Even" or "Odd", or null if the number is null.
      */
     public static String checkEvenOdd(Integer a) {
-        return null; // Replace null with the variable you used to store the result
+        // Check if the number is null
+        if (a == null) {
+            return null; 
+        }
+        // Check if n is even or odd
+        //If a is divisible by 2, return "Even"
+    	if(Math.mod(a, 2) == 0) {
+            return 'Even';
+        } else {
+            return 'Odd';
+        }
     }
 
     /**
@@ -94,7 +139,16 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the input is "Empty", "Null", or "Contains Text".
      */
     public static String checkString(String a) {
-        return null; // Replace null with the variable you used to store the result
+        // Check if the string is null
+        if (a == null) {
+            return 'Null';
+        // Check if the string is empty
+        } else if (a == '') {
+            return 'Empty';
+        // If the string is not null and not empty, it contains text
+        } else {
+            return 'Contains Text';
+        }   
     }
 
     /**
@@ -110,8 +164,23 @@ public with sharing class FlowControlLoopsCollections {
      * @return The grade for the given score.
      */
     public static String determineGrade(Integer score) {
-        return null; // Replace null with the variable you used to store the result
-    }
+       // Check if the score is null
+        if (score == null) {
+            return 'Invalid Score';
+        }
+        // Check if the score is greater than or equal to 90
+        if (score >= 90) {
+            return 'A';
+        } else if (score >= 80) {
+        return 'B';
+        } else if (score >= 70) {
+        return 'C';
+        } else if (score >= 60) {
+        return 'D';
+        } else {
+        return 'F';
+        }
+    }    
 
 
     /**
@@ -122,13 +191,17 @@ public with sharing class FlowControlLoopsCollections {
      * @return The sum of all integers up to the limit.
      */
     public static Integer sumUpToLimit(Integer intLimit) {
-        /* 
-         for (){
-            
-         }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+        // Check if intlimit is null or less than 1
+        if (intLimit == null || intLimit < 1) {
+            return 0; // Returning 0 in case of invalid input
+        }
+        // Create variable named 'sum' and set it to 0
+        Integer sum = 0;
+        // Loop from 1 to intlimit and sum the numbers
+        for (Integer i = 1; i <= intLimit; i++) {
+            sum += i; // add each number to the sum
+        }
+        return sum; // Return the final sum
     }
 
     /**
@@ -138,16 +211,13 @@ public with sharing class FlowControlLoopsCollections {
      * @return The string "Hello World!; Hello World!; Hello World!; "
      */
     public static String returnHelloWorld() {
-        // Initialize the result String
-
+        // Initialize the 'result' variable as an empty string to start with
+        String result = '';
         // Use a for loop to append 'Hello World!;' to the result string three times
-        /* 
-         for (){
-            
-         }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+        for (Integer i = 0; i < 3; i++) {
+            result += 'Hello World!; ';
+        }
+        return result; // Return the final result string
     }
 
     /**
@@ -162,17 +232,20 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static String repeatString(String inputString, Integer repeatCount) {
         // Initialize the result String
-
-        // Use a for loop to append the inputString to the result string repeatCount times
-        /*
-        for () {
-
-            // If it is not the last iteration, add a semicolon to separate the strings
+        String result = '';
+        // Check if the inputString is null or repeatCount is less than 1
+        if (inputString == null || repeatCount < 1) {
+            return result; // Return an empty string if input is invalid
         }
-        */
-
-        // Return the final result string
-        return null; // Replace null with the variable you used to store the result
+        // Loop repeatCount times and append inputString to the result string separated by semicolons
+        for (Integer i = 0; i < repeatCount; i++) {
+            result += inputString;
+            // Append a semicolon only if it's not the last repetition
+            if (i < repeatCount - 1) {
+                result += '; ';
+            }
+        }
+        return result; // Return the final string
     }
 
     /**
@@ -183,30 +256,29 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static List<Integer> createAndPopulateList() {
         // Create a new list of integers
-
+        List<Integer> numbers = new List<Integer>();
+        
         // Add the integers 1, 2, and 3 to the list
-        // add 1
-        // add 2
-        // add 3
-
-        // Return the populated list
-        return null; // Replace null with the variable you used to store the result
+        for (Integer i = 1; i <= 3; i++) {
+            numbers.add(i);
+        }
+        // Return the new list
+        return numbers; 
     }
 
     /**
      * Question 12
      * Creates a List of integers and adds the integers from 1 to 5. Then it removes the number 3 from the list.
-     * Example: createAndRemoveFromList() should return [1, 2, 4, 5]
+     * Example: createAndRemoveFromList () should return [1, 2, 4, 5]
      * @return A List of integers from 1 to 5, excluding the number 3.
      */
     public static List<Integer> createAndRemoveFromList() {
         // Create a new list of integers and add numbers 1 to 5
-        List<Integer> numberList = new List<Integer>{1, 2, 3, 4, 5}; //DO NOT CHANGE
-
+        List<Integer> numberList = new List<Integer>{1, 2, 3, 4, 5}; 
         // Remove the 3rd element (number 3) from the list
-        
-        // Return the updated list
-        return null; // Replace null with the variable you used to store the result
+         numberList.remove(2); // Index 2 corresponds to the 3rd element in a zero-based index list
+         // Return the updated list
+        return numberList;
     }
 
     /**
@@ -218,16 +290,32 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static List<Integer> createIntegerList(Integer n) {
         // Create a new list of integers 
-
-        /*
-        for() {
-            //add integer to the list
+        List<integer> numberList = new List<Integer>();
+        // Loop to add integers from 1 to 'n" to the list
+        for (Integer i = 1; i <= n; i++) {
+            numberList.add (i) ;
         }
-        */ 
-
-        return null; // Replace null with the variable you used to store the result
+        // Return the new list
+        return numberList;
     }
 
+    /**
+    * Question 14
+    * Create a list of integers from 1 to 100.
+    * @return A List of integers from 1 to 100.
+    */
+    public static List<Integer> createIntegerList() {
+    // Create a new list with the type of Integer
+    List<Integer> numberList = new List<Integer>();
+
+    // Populate the List of integers from 1 to 100 using a loop
+    for (Integer i = 1; i <= 100; i++) {
+        numberList.add(i);
+    }
+
+    // Return the populated list
+    return numberList;
+}
     /**
      * Question 14
      * Remove duplicate values from the list of Strings.
@@ -241,8 +329,11 @@ public with sharing class FlowControlLoopsCollections {
         Set<String> stringSet = new Set<String>();
 
         //add strings to the set
-
-        return null; // Replace null with the variable you used to store the result
+        for (String str : inputList) {
+            stringSet.add(str);
+        }
+     // Return the populated set
+     return stringSet;
     }
 
     /**
@@ -252,14 +343,22 @@ public with sharing class FlowControlLoopsCollections {
      * @return The sum of positive integers from the list.
      */
     public static Integer sumPositiveIntegers() {
-        List<Integer> numbers = new List<Integer>{-1, 2, -3, 4, -5, 6}; //DO NOT CHANGE
+         // List of integers provided
+    List<Integer> numbers = new List<Integer>{-1, 2, -3, 4, -5, 6}; // DO NOT CHANGE
 
-        // Loop through the list of integers
-            // if the number is negative skip this iteration
-        
+    // Initialize a variable to hold the sum of positive integers
+    Integer sum = 0;
 
-        return null; // Replace null with the variable you used to store the result
+    // Loop through the list of integers
+    for (Integer num : numbers) {
+        // If the number is positive, add it to the sum
+        if (num > 0) {
+            sum += num;
+        }
     }
+    // Return the sum of positive integers
+    return sum;
+}
 
     /**
      * Question 16
@@ -270,14 +369,21 @@ public with sharing class FlowControlLoopsCollections {
      * @return The position of the word in the list as a string or -1 if the word was not found.
      */
     public static Integer findWordInList(String wordToFind, List<String> words) {
-        // The variable to store the index of the word
+     // The variable to store the index of the word
+    Integer index = -1;
 
-        // Loop through the list of words
-            // If the current word is the word to find, exit the loop
-
-        return null; // Replace null with the variable you used to store the result
+    // Loop through the list of words
+    for (Integer i = 0; i < words.size(); i++) {
+        // If the current word is the word to find, exit the loop
+        if (words[i].equals(wordToFind)) {
+            index = i;
+            break;
+        }
     }
-
+    // Return the index of the word or -1 if not found
+    return index;
+}
+         
     /**
      * Question 17
      * Loop through the list of money and adds them up until it accumulates more than 40 and then stops counting.
@@ -288,9 +394,19 @@ public with sharing class FlowControlLoopsCollections {
     public static Decimal countMoney() {
         // The list of money in the wallet, represented in dollars and cents
         List<Decimal> moneyInWallet = new List<Decimal>{0.50, 10, 3.84, 24.60, 9.08, 50, 4.90}; //DO NOT CHANGE
-
-        return null; // Replace null with the variable you used to store the result
+        // Initialize the sum
+        Decimal sum = 0;
+        // Loop through the list of money
+        for (Decimal amount : moneyInWallet) {
+        sum += amount;
+        // If the total sum exceeds 40, stop counting
+        if (sum > 40) {
+        break; //The break condition ensures the loop stops adding as soon as sum exceeds 40
+      }
     }
+    // Return the total sum of money
+    return sum;
+}
 
     /**
      * Question 18
@@ -300,7 +416,7 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Map<String, Integer> addItemsToMap() {
         // Initialize an empty Map
-
+        Map<String, Integer> fruitMap = new Map<String, Integer>();
         // Add key-value pairs to the Map
         // add Apples => 5
         // add Oranges => 10
@@ -308,9 +424,18 @@ public with sharing class FlowControlLoopsCollections {
         // add Pears => 20
         // add Grapes => 25
 
-        return null; // Replace null with the variable you used to store the result
+       // Create a list of fruit names
+       List<String> fruits = new List<String>{'Apples', 'Oranges', 'Bananas', 'Pears', 'Grapes'};
+       // Create a list of corresponding quantities
+       List<Integer> quantities = new List<Integer>{5, 10, 15, 20, 25};
+       // Use a loop to add key-value pairs to the Map
+       for (Integer i = 0; i < fruits.size(); i++) {
+       fruitMap.put(fruits[i], quantities[i]);
     }
-
+       // Return the populated Map
+       return fruitMap;
+}
+    
     /**
      * Question 19
      * Create a map where the keys are the names of employees and the values are their salaries.
@@ -322,47 +447,59 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Integer getSalary(String employeeName) {
         // Initialize a Map
-
+        Map<String, Integer> employeeSalaries = new Map<String, Integer>();
         // Add key-value pairs to the Map
         // add John Doe => 50000
         // add Jane Smith => 60000
         // add Sam Brown => 55000
         // add Alice Johnson => 65000
-
+        // Create a list of employee names
+        List<String> employees = new List<String>{'John Doe', 'Jane Smith', 'Sam Brown', 'Alice Johnson'};
+        // Create a list of corresponding salaries
+        List<Integer> salaries = new List<Integer>{50000, 60000, 55000, 65000};
+        // Use a loop to add key-value pairs to the Map
+        for (Integer i = 0; i < employees.size(); i++) {
+        employeeSalaries.put(employees[i], salaries[i]);
+}
         // Get the salary of the employee
-
+        Integer salary = employeeSalaries.get(employeeName);
         // Return the salary of the employee, or null if the employee is not found in the Map
-        return null; // Replace null with the variable you used to store the result
+        return salary;
     }
 
     /**
-     * Question 20
-     * Create a map where the keys are the names of employees and the values are their salaries.
-     * Then, iterates over the map and checks if an employee's salary is more than 55000.
-     * If it is, add the employee's name to a list of employees that is returned by the method.
-     * Remember that a Map is a collection of key-value pairs. Key are a set of unique values, so you can't have duplicate keys. Values are a list of values, so you can have duplicate values.
-     * Resource: https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_loops_for_lists.htm
-     * Example: getHighPaidEmployees() should return ['Jane Smith', 'Alice Johnson']
-     * @return A list of employee names who have a salary more than 55000.
-     */
+    * Question 20
+    * Create a map where the keys are the names of employees and the values are their salaries.
+    * Then, iterates over the map and checks if an employee's salary is more than 55000.
+    * If it is, add the employee's name to a list of employees that is returned by the method.
+    * Example: getHighPaidEmployees() should return ['Jane Smith', 'Alice Johnson']
+    * @return A list of employee names who have a salary more than 55000.
+    */
     public static List<String> getHighPaidEmployees() {
-        // Initialize a Map
+        // Initialize a Map to store employee names and their salaries
         Map<String, Integer> employeeSalaries = new Map<String, Integer>();
-
-        // Add key-value pairs to the Map
-        // add John Doe => 50000
-        // add Jane Smith => 60000
-        // add Sam Brown => 55000
-        // add Alice Johnson => 65000
-
-        // Initialize a list to store the names of high paid employees
-
+        // Create a list of employee names
+        List<String> employees = new List<String>{'John Doe', 'Jane Smith', 'Sam Brown', 'Alice Johnson'};
+        // Create a list of corresponding salaries
+        List<Integer> salaries = new List<Integer>{50000, 60000, 55000, 65000};
+        // Use a for loop to add key-value pairs to the Map
+        for (Integer i = 0; i < employees.size(); i++) {
+            employeeSalaries.put(employees[i], salaries[i]);
+        }
+        // Initialize a list to store the names of high-paid employees
+        List<String> highPaidEmployees = new List<String>();
         // Iterate over the Map using a for loop
+        for (String employee : employeeSalaries.keySet()) {
+            Integer salary = employeeSalaries.get(employee);
             // Check if the salary of the employee is more than 55000
-                // Add the employee to the list of high paid employees
-
-        // Return the list of high paid employees
-        return null; // Replace null with the variable you used to store the result
+            if (salary > 55000) {
+                // Add the employee to the list of high-paid employees
+                highPaidEmployees.add(employee);
+            }
+        }
+        // Return the list of high-paid employees
+        return highPaidEmployees;
     }
-
 }
+
+
